# BiBorBA

./: .gitignore  README.md  start.ps1  start.sh  stop.ps1  stop.sh
langgraph-rag/: .dockerignore  .env  Dockerfile  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
langgraph-rag/app/: config.py  database.py  dependencies.py  main.py
langgraph-rag/app/api/middleware/: __init__.py  error_handler.py
langgraph-rag/app/api/routes/: __init__.py  batch_queries.py  collection_management.py  collections.py  comparison_routes.py  evaluation_routes.py  query.py  scraper.py  stackoverflow.py
langgraph-rag/app/api/schemas/: collection_schemas.py  comparison_schemas.py  evaluation_schemas.py  schemas.py
langgraph-rag/app/core/: batched_embeddings.py  model_manager.py  prompts.py
langgraph-rag/app/core/graph/: adaptive_graph.py  pure_llm_graph.py  rag_graph.py  utils.py
langgraph-rag/app/core/graph/nodes/: answer_grader.py  base_grader.py  document_grader.py  generator.py  retriever.py  (+2 more)
langgraph-rag/app/evaluation/: bert_evaluation.py  evaluation_service.py  models.py
langgraph-rag/app/services/: batch_query_service.py  collection_health_service.py  collection_manager.py  comparison_service.py  embedding_service.py  graph_service.py  job_manager.py  stackoverflow_connector.py  stackoverflow_scrapper.py
langgraph-rag/app/tests/: conftest.py  test_batch_query.py
langgraph-rag/app/tests/unit/: test_collection_manager.py  test_html_cleaning.py  test_pdf_loader.py  test_vector_store.py
langgraph-rag/app/utils/: __init__.py  text_cleaning.py  timing.py
(+34 files in other folders)
