[project]
name = "langgrapharag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "bert-score~=0.3.13",
    "chromadb~=1.1.0",
    "dotenv~=0.9.9",
    "fastapi~=0.104.1",
    "langchain~=0.3.27",
    "langchain-chroma~=0.2.6",
    "langchain-community~=0.3.29",
    "langchain-core~=0.3.76",
    "langchain-ollama~=0.3.8",
    "langchain-openai~=0.3.33",
    "langchain-text-splitters~=0.3.11",
    "langgraph~=0.4.10",
    "psycopg2-binary>=2.9.11",
    "pydantic~=2.11.9",
    "pydantic-settings~=2.10.1",
    "pymupdf~=1.26.4",
    "python-dateutil~=2.8.2",
    "python-dotenv~=1.1.1",
    "requests~=2.32.5",
    "sqlalchemy~=2.0.43",
    "transformers~=4.56.1",
    "uvicorn~=0.24.0",
    "pytest~=8.3.4",
    "reportlab~=4.2.5",
    "httpx<0.28.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
